[workspace]
members = ["xtask/", "lib/*", "crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Guzmán Monné"]

[profile.dev]
# Disabling debug info speeds up builds.
debug = 0

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = 0

[workspace.dependencies]
# local crates
a = { path = "./crates/a", version = "0.0.0" }
b = { path = "./crates/b", version = "0.0.0" }
openai = { path = "./crates/openai", version = "0.0.0" }

