[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] } # a simple to use, efficient, and full-featured Command Line Argument Parser
duct = "0.13.6"                                     # a library for running child processes
