[package]
name = "gpt"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "A CLI tool to interact with ChatGPT as a Software Engineer"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "a"
path = "src/main.rs"

[lib]
name = "a"
path = "src/lib.rs"

[dependencies]
gpt_tokenizer = { version = "0.1.0", path = "../../lib/gpt_tokenizer" }
bat = "0.24"
copypasta-ext = "0.4.4"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.23"

[features]
clipboard = []
default = ["clipboard"]
