[package]
name = "b"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "A CLI tool to interact with ChatGPT as a Software Engineer"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "b"
path = "src/main.rs"

[lib]
name = "b"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.1.8", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.17"
openai = { path = "../openai", version = "0.0.0" }
serde = { version = "1.0.152", features = ["derive"] }
serde_either = "0.2.1"          # Simple set to enums to deserialize and serialize data that can either be string, struct or vec
serde_json = "1.0.93"
serde_yaml = "0.9.19"                # YAML data format for Serde
async-trait = "0.1.68"              # Type erasure for async trait methods
tokio = { version = "1.27.0", features = ["full"] }                   # An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.…
indicatif = "0.17.3"           # A progress bar and cli reporting library for Rust
