[package]
name = "c"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "A CLI tool to interact with ChatGPT as a Software Engineer"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "c"
path = "src/main.rs"

[lib]
name = "c"
path = "src/lib.rs"

[dependencies]
openai = { path = "../openai", version = "0.0.0" }
anthropic = { path = "../anthropic", version = "0.0.0" }
spinner = { path = "../spinner", version = "0.0.0" }
clap = { version = "4.1.8", features = ["derive", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9.19"
color-eyre = "0.6.2"
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tokio = "1.29.1"
tokio-stream = "0.1.14"
indicatif = "0.17.5"
ulid = "1.0.0"
reqwest-eventsource = "0.4.0"

