[package]
name = "d"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "A CLI tool to interact with ChatGPT as a Software Engineer"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "d"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.14", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
color-eyre = "0.6.2"
tokio = "1.35.1"
env_logger = "0.10.1"
log = "0.4.20"
openai = "1.0.0-alpha.13"
bat = "0.24.0"
crossterm = "0.27.0"
