[package]
name = "d"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "A CLI tool to interact with ChatGPT as a Software Engineer"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "d"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.14", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
color-eyre = "0.6.2"
tokio = "1.35.1"
env_logger = "0.10.1"
log = "0.4.20"
openai = "1.0.0-alpha.13"
bat = "0.24.0"
crossterm = "0.27.0"
atty = "0.2"
spinners = "4.1.1"
rayon = "1.8.0"
lazy_static = "1.4.0"
thiserror = "1.0.56"
bincode = "1.3.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
uuid = { version = "1.6.1", features = ["v4"] }
