[package]
name = "e"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "Interact with multiple LLMs from the terminal"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "e"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "string", "env"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.34"
env_logger = "0.11.5"
log = "0.4.22"
bat = { version = "0.24.0", path = "../../lib/bat" }
thiserror = "1.0.56"
