[package]
name = "openai"
version = "0.0.0"
homepage = "https://github.com/cloudbridgeuy/a"
description = "OpenAI API Wrapper"
autobins = false

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "openai"
path = "src/lib.rs"

[dependencies]
custom_error = "1.9.2"                                  # Define custom errors without boilerplate using the custom_error! macro.
